Remove debug label from app name - cleaner UX for testing

--- a/wisp-field-app/android/app/build.gradle
+++ b/wisp-field-app/android/app/build.gradle
@@ -45,11 +45,14 @@ android {
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
+            applicationIdSuffix ""  // Don't add .debug suffix
+            debuggable true
         }
         release {
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            debuggable false
         }
     }
 }
