--- a/wisp-field-app/android/app/src/main/AndroidManifest.xml
+++ b/wisp-field-app/android/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         tools:ignore="ScopedStorage" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     
+    <!-- Push Notifications -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    
     <!-- Other -->
     <uses-permission android:name="android.permission.VIBRATE" />
 
