--- a/wisp-field-app/package.json
+++ b/wisp-field-app/package.json
@@ -17,6 +17,7 @@
     "@react-native-firebase/app": "^18.9.0",
     "@react-native-firebase/auth": "^18.9.0",
     "@react-native-firebase/firestore": "^18.9.0",
+    "@react-native-firebase/messaging": "^18.9.0",
     "@react-navigation/native": "6.1.18",
     "@react-navigation/stack": "6.4.1",
     "axios": "1.6.5",
