--- a/functions/package.json
+++ b/functions/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "firebase-admin": "^13.0.1",
     "firebase-functions": "^6.1.1",
+    "lte-pci-mapper": "file:..",
     "mongodb": "^6.20.0"
   },
   "devDependencies": {
