Rebrand to WISP Multitool + Add comprehensive documentation
REBRANDING COMPLETE:
Project renamed from LTE WISP Management Platform to WISP Multitool

Changes across all platforms:
- Mobile app name: WISP Multitool
- Web platform branding updated
- APK filename: WISP-Multitool-v1.0.0-release.apk
- Package names updated
- README updated with new branding

IN-APP DOCUMENTATION ADDED:

Web Platform:
- Complete help system at /help
- Topics: Overview, Getting Started, User Management, Help Desk, Work Orders, Roles, Troubleshooting
- Searchable sidebar navigation
- Rich formatted content
- Examples and best practices

Mobile App:
- Help screen with comprehensive guides
- Topics: Overview, Getting Started, Work Orders, QR Scanner, Notifications, Troubleshooting
- Accessible from home screen
- Offline documentation
- Step-by-step instructions

APK DOWNLOAD INTEGRATION:
- APK download component in Work Orders module
- APK download component in Help Desk module
- Firebase Storage integration
- Installation instructions included
- Version and size information
- Upload script: upload-apk-to-firebase.ps1

Features:
- Download latest mobile app directly from web platform
- Auto-detects APK version and size
- Shows feature list
- Collapsible installation instructions
- Beautiful branded UI

All documentation inline and accessible without leaving the app!

--- a/Module_Manager/package.json
+++ b/Module_Manager/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lte-wisp-management-platform",
+  "name": "wisp-multitool",
   "version": "1.0.0",
-  "description": "LTE WISP Management Platform - Main Module Manager",
+  "description": "WISP Multitool - Complete wireless ISP management platform",
   "type": "module",
   "scripts": {
     "dev": "vite dev",
