WispTools.io Rebranding and 4-Module Architecture Implementation
MAJOR REBRANDING TO WISPTOOLS.IO:
- Updated package.json: name to wisptools-io, version to 2.0.0
- Updated app.html: title to WispTools.io - WISP Management Platform
- Created comprehensive WispTools.io plan document

NEW 4-MODULE ARCHITECTURE:
1. PLAN Module (Blue Theme) - Strategic planning and design tools
2. DEPLOY Module (Green Theme) - Implementation and deployment tools
3. MONITOR Module (Amber Theme) - Real-time monitoring and performance management
4. MAINTAIN Module (Red Theme) - Comprehensive maintenance and support

ADMIN MANAGEMENT:
- Admin Management module for owners and administrators
- User Management, Tenant Management, System Settings, Billing
- System status dashboard and quick actions

NEW DASHBOARD:
- Modern gradient design with module cards
- Quick actions for common tasks
- Admin section for platform administrators
- Tenant information display

MODULE STRUCTURE:
- Each module has its own landing page with feature overview
- Consistent design language across all modules
- Role-based access control
- Map-centric interface ready for implementation

This establishes the foundation for WispTools.io as a comprehensive,
professional WISP management platform.

--- a/Module_Manager/package.json
+++ b/Module_Manager/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "wisp-multitool",
-  "version": "1.0.0",
-  "description": "WISP Multitool - Complete wireless ISP management platform",
+  "name": "wisptools-io",
+  "version": "2.0.0",
+  "description": "WispTools.io - Comprehensive WISP management platform for planning, deployment, monitoring, and maintenance",
   "type": "module",
   "scripts": {
     "dev": "vite dev",
