Update billing system to use wisptools.io custom domain
- Updated PayPal webhook URL to use custom domain: https://wisptools.io/api/billing/webhook/paypal
- Modified billing service to use wisptools.io API endpoint
- Added Firebase Hosting rewrite rules for custom domain routing
- Updated Firebase Cloud Functions to handle custom domain paths
- Added billing API configuration to apphosting.yaml
- Created deployment script for wisptools.io domain setup
- Updated all documentation and deployment scripts with custom domain URLs

Custom Domain Configuration:
- Frontend: https://wisptools.io
- Admin Billing: https://wisptools.io/admin/billing
- Tenant Billing: https://wisptools.io/modules/billing
- PayPal Webhook: https://wisptools.io/api/billing/webhook/paypal
- API Base URL: https://wisptools.io/api

Build passes successfully with custom domain integration

--- a/Module_Manager/apphosting.yaml
+++ b/Module_Manager/apphosting.yaml
@@ -96,3 +96,21 @@ env:
     value: https://sas.federatedwireless.com/api/v1
     availability:
       - RUNTIME
+  
+  # Billing API Configuration
+  - variable: VITE_API_URL
+    value: https://wisptools.io/api
+    availability:
+      - BUILD
+      - RUNTIME
+  
+  # PayPal Configuration (for backend)
+  - variable: PAYPAL_CLIENT_ID
+    value: ARcw63HPgW_YB1FdF3kH2...
+    availability:
+      - RUNTIME
+  
+  - variable: PAYPAL_CLIENT_SECRET
+    secret: paypal-client-secret
+    availability:
+      - RUNTIME
