--- a/firebase.json
+++ b/firebase.json
@@ -14,6 +14,24 @@
     ],
     "runtime": "nodejs20"
   },
+  "hosting": {
+    "public": "Module_Manager/build",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "/api/billing/**",
+        "function": "billingApi"
+      },
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  },
   "apphosting": {
     "backendId": "lte-pci-mapper",
     "rootDir": "/Module_Manager",
