Fix tenant module - remove wisptools.io references
- Fixed billingService.ts to use Firebase Cloud Functions proxy
- Fixed apphosting.yaml VITE_API_URL environment variable
- Removed all wisptools.io references that were causing CORS errors
- Tenant module should now work with proper API endpoints
- All services now consistently use Firebase Cloud Functions proxy

--- a/Module_Manager/apphosting.yaml
+++ b/Module_Manager/apphosting.yaml
@@ -99,7 +99,7 @@ env:
   
   # Billing API Configuration
   - variable: VITE_API_URL
-    value: https://wisptools.io/api
+    value: https://us-central1-lte-pci-mapper-65450042-bbf71.cloudfunctions.net/hssProxy
     availability:
       - BUILD
       - RUNTIME
