--- a/firebase.json
+++ b/firebase.json
@@ -23,6 +23,15 @@
     ],
     "headers": [
       {
+        "source": "**/_app/**",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=31536000, immutable"
+          }
+        ]
+      },
+      {
         "source": "**/*.@(js|css)",
         "headers": [
           {
