--- a/firebase.json
+++ b/firebase.json
@@ -74,6 +74,10 @@
         "function": "billingApi"
       },
       {
+        "source": "/api/deploy/**",
+        "function": "hssProxy"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
