Update Firebase Hosting rewrite to use Cloud Run service for hssProxy, add request logging

--- a/firebase.json
+++ b/firebase.json
@@ -75,7 +75,10 @@
       },
       {
         "source": "/api/deploy/**",
-        "function": "hssProxy"
+        "run": {
+          "serviceId": "hssproxy",
+          "region": "us-central1"
+        }
       },
       {
         "source": "**",
