Fix Firebase Hosting rewrite to use function syntax instead of run for hssProxy

--- a/firebase.json
+++ b/firebase.json
@@ -75,10 +75,7 @@
       },
       {
         "source": "/api/deploy/**",
-        "run": {
-          "serviceId": "hssproxy",
-          "region": "us-central1"
-        }
+        "function": "hssProxy"
       },
       {
         "source": "**",
