Fix tenant API routing: add /api/** rewrite to proxy and use relative /api in tenantService

--- a/firebase.json
+++ b/firebase.json
@@ -74,7 +74,7 @@
         "function": "billingApi"
       },
       {
-        "source": "/api/deploy/**",
+        "source": "/api/**",
         "function": "hssProxy"
       },
       {
