Fix tenant API paths: remove double /api; route /admin via proxy and use dedicated admin base URL

--- a/firebase.json
+++ b/firebase.json
@@ -78,6 +78,10 @@
         "function": "hssProxy"
       },
       {
+        "source": "/admin/**",
+        "function": "hssProxy"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
