hosting: route /api/deploy/** to isoProxy to fix 404s during ISO generation

--- a/firebase.json
+++ b/firebase.json
@@ -74,6 +74,10 @@
         "function": "billingApi"
       },
       {
+        "source": "/api/deploy/**",
+        "function": "isoProxy"
+      },
+      {
         "source": "/api/**",
         "function": "hssProxy"
       },
