Fix create project functionality in Plan module - Add error handling and user feedback - Fix backend route to properly handle createdBy field - Add proper form validation and loading states

--- a/firebase.json
+++ b/firebase.json
@@ -15,7 +15,7 @@
     "runtime": "nodejs20"
   },
   "hosting": {
-    "public": "Module_Manager/build",
+    "public": "Module_Manager/build/client",
     "ignore": [
       "firebase.json",
       "**/.*",
