refactor: Clean up API architecture and rename hssProxy to apiProxy
- Renamed hssProxy function to apiProxy for clarity
- Updated firebase.json to use apiProxy
- Updated all logging from [hssProxy] to [apiProxy]
- Clarified architecture comments in code
- Created BACKEND_ARCHITECTURE.md documentation
- Updated server.js comments to reflect unified API

This removes confusion - apiProxy handles ALL routes on port 3001,
not just HSS routes. The unified architecture is cleaner and simpler.

Architecture:
- Port 3001: Unified Main API (all routes)
- Port 3002: EPC/ISO API (deployment routes)
- Port 3000: Reserved/unused

--- a/firebase.json
+++ b/firebase.json
@@ -75,11 +75,11 @@
       },
       {
         "source": "/api/**",
-        "function": "hssProxy"
+        "function": "apiProxy"
       },
       {
         "source": "/admin/**",
-        "function": "hssProxy"
+        "function": "apiProxy"
       },
       {
         "source": "**",
