--- a/Module_Manager/package.json
+++ b/Module_Manager/package.json
@@ -16,17 +16,18 @@
     "deploy:firebase": "npm run build && cd .. && firebase deploy --only hosting"
   },
   "dependencies": {
+    "@arcgis/core": "^4.33.0",
     "@sveltejs/adapter-node": "^5.2.9",
     "@sveltejs/kit": "^2.7.4",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
-    "svelte": "^5.0.0",
-    "firebase": "^11.1.0",
-    "@arcgis/core": "^4.33.0",
+    "chart.js": "^4.4.1",
     "express": "^4.18.2",
+    "firebase": "^11.1.0",
     "mongodb": "^6.20.0",
-    "chart.js": "^4.4.1"
+    "svelte": "^5.0.0"
   },
   "devDependencies": {
+    "@sveltejs/adapter-static": "^3.0.10",
     "@types/node": "^20.10.0",
     "svelte-check": "^4.0.0",
     "tslib": "^2.6.0",
@@ -34,4 +35,3 @@
     "vite": "^5.0.0"
   }
 }
-
