Fix: Update domain configurations for all Firebase Hosting domains
- Backend CORS: Added all Firebase Hosting domains (wisptools.io, wisptools-io.web.app, etc.)
- Firebase authDomain: Dynamic detection - uses wisptools.io when on custom domain
- apiProxy CORS: Explicit allowed origins list for all hosting domains
- Added OAuth redirect URIs documentation
- Fixed domain-related errors across frontend, backend, and Cloud Functions

All domains now properly configured:
- wisptools.io (custom domain)
- wisptools-io.web.app
- wisptools-io.firebaseapp.com
- lte-pci-mapper-65450042-bbf71.web.app
- lte-pci-mapper-65450042-bbf71.firebaseapp.com
- App Hosting domains
- localhost (development)

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,15 @@
 {
   "projects": {
     "default": "lte-pci-mapper-65450042-bbf71"
-  }
+  },
+  "targets": {
+    "lte-pci-mapper-65450042-bbf71": {
+      "hosting": {
+        "wisptools": [
+          "wisptools-io"
+        ]
+      }
+    }
+  },
+  "etags": {}
 }
