Firebase: Migrate to new wisptools-production project
- Created new Firebase project: wisptools-production
- Updated .firebaserc to use new project
- Updated firebase.json to use default hosting site
- Updated frontend Firebase config with new credentials
- Updated Functions CORS for new project domains
- Updated GitHub Actions workflow for new project ID
- All configuration based on GitHub as source of truth

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,15 +1,5 @@
 {
   "projects": {
-    "default": "lte-pci-mapper-65450042-bbf71"
-  },
-  "targets": {
-    "lte-pci-mapper-65450042-bbf71": {
-      "hosting": {
-        "wisptools": [
-          "wisptools-io"
-        ]
-      }
-    }
-  },
-  "etags": {}
+    "default": "wisptools-production"
+  }
 }
