Firebase: Update hosting site to wisptools-prod (wisptools-io was reserved)

--- a/firebase.json
+++ b/firebase.json
@@ -15,7 +15,7 @@
     "runtime": "nodejs20"
   },
   "hosting": {
-    "site": "wisptools-production",
+    "site": "wisptools-prod",
     "public": "Module_Manager/build/client",
     "ignore": [
       "firebase.json",
