Fix: Exclude static assets from Firebase rewrites to fix JS module loading

--- a/firebase.json
+++ b/firebase.json
@@ -107,6 +107,10 @@
         "function": "apiProxy"
       },
       {
+        "source": "!/_app/**",
+        "destination": "/index.html"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
