--- a/firebase.json
+++ b/firebase.json
@@ -34,7 +34,7 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "public, max-age=31536000, immutable"
+            "value": "no-cache, no-store, must-revalidate, max-age=0"
           }
         ]
       },
