--- a/firebase.json
+++ b/firebase.json
@@ -110,6 +110,8 @@
         "source": "**",
         "destination": "/index.html"
       }
-    ]
+    ],
+    "cleanUrls": true,
+    "trailingSlash": false
   }
 }
