--- a/firebase.json
+++ b/firebase.json
@@ -108,7 +108,8 @@
       },
       {
         "source": "**",
-        "destination": "/index.html"
+        "destination": "/index.html",
+        "exclude": ["**/*.{js,css,map,json,png,jpg,jpeg,gif,svg,webp,ico,woff,woff2,ttf,eot}"]
       }
     ],
     "cleanUrls": true,
