--- a/Module_Manager/package.json
+++ b/Module_Manager/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev",
-    "build": "node --max-old-space-size=6144 node_modules/vite/bin/vite.js build",
+    "build": "node --max-old-space-size=6144 node_modules/vite/bin/vite.js build && npm run postbuild",
+    "postbuild": "node -e \"const fs = require('fs'); const path = require('path'); const indexPath = path.join('build', 'client', 'index.html'); const error404Path = path.join('build', 'client', '404.html'); if (fs.existsSync(indexPath)) { fs.copyFileSync(indexPath, error404Path); console.log('✓ Created 404.html fallback'); } else { console.error('✗ index.html not found!'); process.exit(1); }\"",
     "build:check": "npm run build && ls -lh build/client/_app/immutable/entry/",
     "start": "node server.js",
     "start:original": "node build/index.js",
