Add errorDocument to Firebase Hosting config for better 404 handling

--- a/firebase.json
+++ b/firebase.json
@@ -112,6 +112,7 @@
       }
     ],
     "cleanUrls": true,
-    "trailingSlash": false
+    "trailingSlash": false,
+    "errorDocument": "404.html"
   }
 }
