Add explicit root path rewrite and disable cleanUrls to fix 404 errors

--- a/firebase.json
+++ b/firebase.json
@@ -107,7 +107,7 @@
         "function": "apiProxy"
       },
       {
-        "source": "/*",
+        "source": "/",
         "destination": "/index.html"
       },
       {
@@ -115,7 +115,7 @@
         "destination": "/index.html"
       }
     ],
-    "cleanUrls": true,
+    "cleanUrls": false,
     "trailingSlash": false
   }
 }
