Fix: Add errorDocument to firebase.json to prevent 404 errors

--- a/firebase.json
+++ b/firebase.json
@@ -19,6 +19,7 @@
       "**/.*",
       "**/node_modules/**"
     ],
+    "errorDocument": "404.html",
     "headers": [
       {
         "source": "/api/**",
