--- a/Module_Manager/package.json
+++ b/Module_Manager/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev",
-    "build": "node --max-old-space-size=6144 node_modules/vite/bin/vite.js build && npm run postbuild",
+    "build": "cross-env PUBLIC_ARCGIS_API_KEY=AAPTxy8BH1VEsoebNVZXo8HurGbnlTRSD_LpCIzNN_GYtkaaVGZtaA5vQ2USVJ_79QPe7yOvuh8tFFM0WMguSFCMJ7IG8r9rfuM6fzDUDviu7eAvqgqA9nu1J3mT3jbv_rUPKU2dgp9H8qtEZDOjJ2G_nNM9XWuipReP9xbzFvg8Bo24782l8wWU8RMjLGcxEw_5aKtJZ-XMGb3PlBMj5wTBiF84JeWXIppu_wJ504qzB7A.AT1_12sjSDHZ node --max-old-space-size=6144 node_modules/vite/bin/vite.js build && npm run postbuild",
     "postbuild": "node -e \"const fs = require('fs'); const path = require('path'); const indexPath = path.join('build', 'client', 'index.html'); const error404Path = path.join('build', 'client', '404.html'); if (fs.existsSync(indexPath)) { fs.copyFileSync(indexPath, error404Path); console.log('✓ Created 404.html fallback'); } else { console.error('✗ index.html not found!'); process.exit(1); }\"",
     "build:check": "npm run build && ls -lh build/client/_app/immutable/entry/",
     "start": "node server.js",
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.10",
     "@types/node": "^20.10.0",
+    "cross-env": "^10.1.0",
     "svelte-check": "^4.0.0",
     "tslib": "^2.6.0",
     "typescript": "^5.3.0",
